Don't write `RelativePath` to the database just yet. A later change will make this writable to DB.
Summary:
- Gorp doesn't clearly support backwards compatible database upgrades (requires both DB and code to
update in tandem). It throws a "NonFatalError" when DB schema contains columns not present in the
code model. We ignore these errors to allow DB migrations while an older version of the code
continues to run.
- Instructions to enable writing `RelativePath`: remove ' db:"-"' tag from artifact.go

Test Plan: Tested migration levels 2 and 3 using integration tests

Reviewers: kylec

Reviewed By: kylec

Subscribers: changesbot, nate

Differential Revision: https://tails.corp.dropbox.com/D139956

--- a/migrations/README
+++ b/migrations/README
@@ -8,3 +8,10 @@ guidelines on how to write the migration scripts.
 NOTE: Please run `go generate -v ./...` after making any changes to this folder. We are embedding the
 migration script as a go file (this translation is performed by `go generate`). Without running `go
 generate`, the migration file will *NOT* be included and applied.
+
+Testing database migrations (backwards compatiblity):
+-----------------------------------------------------
+During client integration tests, we execute the same migrations that we would on prod. By default,
+these tests will run against the previously deployed version (this *should* match the version on
+prod). To verify that tests continue to run after migrations, bump up the migration level stored in
+client_test.go#setupDB.
